--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,11 @@
 <img src="{avatar_url}">
-<h4>{name}</h4>
-<h6>{login}</h6>
-<hr>
-<ul>
-    <li>{location}</li>
-    <li>{email}</li>
-    <li>{blog}</li>
-    <li>{joined}</li>
+<h2>{name}</h2>
+<h4>{login}</h4>
+<ul class="flex-container">
+	<li class="flex-item-left">
+	{location}, 
+    {email}, 
+    {blog}, 
+    {joined}
+    </li>
 </ul>
