--- a/templates/repo.html
+++ b/templates/repo.html
@@ -1,4 +1,4 @@
-<a class="repo-item" href="{url}">
+<a class="flex-item-right" href="{url}">
     <h4>{name}</h4>
     <h5>{description}</h5>
     <p>{updated}</p>
