getting basic layout setup

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,11 +1,12 @@
 <img src="{avatar_url}">
-<h2>{name}</h2>
-<h4>{login}</h4>
+<h3>{name}</h3>
+<h5>{login}</h5>
+<hr>
 <ul class="flex-container">
 	<li class="flex-item-left">
-	{location}, 
-    {email}, 
-    {blog}, 
+	{location}<br>
+    <a href="mailto:">{email}</a><br>
+    <a href="#" id="github">{blog}</a><br>
     {joined}
     </li>
 </ul>
