--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,12 @@
 <img src="{avatar_url}">
 <h3>{name}</h3>
-<h5>{login}</h5>
+<h4>{login}</h4>
 <hr>
 <ul class="flex-container">
 	<li class="flex-item-left">
 	{location}<br>
     <a href="mailto:">{email}</a><br>
-    <a href="#" id="github">{blog}</a><br>
+    <a href="#">{blog}</a><br>
     {joined}
     </li>
 </ul>
