--- a/templates/repo.html
+++ b/templates/repo.html
@@ -1,5 +1,8 @@
-<a class="flex-item-right" href="{url}">
-    <h4>{name}</h4>
-    <h5>{description}</h5>
-    <p>{updated}</p>
-</a>
+<ul class="flex-container">
+    <li class="flex-item-right">
+        <a href="#">{name}</a>
+        <h4>{description}</h4>
+        <p>{updated}</p>
+        <hr>
+    </li>
+</ul>
