fixing some styling issues

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 <hr>
 <ul class="flex-container">
 	<li class="flex-item-left">
+	{company}<br>
 	{location}<br>
     <a href="mailto:">{email}</a><br>
     <a href="#">{blog}</a><br>
