making it look pretty

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,13 +1,13 @@
 <img src="{avatar_url}">
 <h3>{name}</h3>
-<h4>{login}</h4>
+<h4 class="lefty">{login}</h4>
 <hr>
-<ul class="flex-container">
+<ul class="flex-container-left">
 	<li class="flex-item-left">
 	{company}<br>
 	{location}<br>
     <a href="mailto:">{email}</a><br>
-    <a href="#">{blog}</a><br>
+    <a href="http://kenmcleod.tumblr.com/">{blog}</a><br>
     {joined}
     </li>
 </ul>
