--- a/templates/repo.html
+++ b/templates/repo.html
@@ -1,7 +1,7 @@
 <ul class="flex-container">
     <li class="flex-item-right">
         <a href="#">{name}</a>
-        <h4>{description}</h4>
+        <h4 class="righty">{description}</h4>
         <p>{updated}</p>
         <hr>
     </li>
