adding icons and messing with css

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,8 +6,8 @@
 	<li class="flex-item-left">
 	{company}<br>
 	{location}<br>
-    <a href="mailto:">{email}</a><br>
-    <a href="http://kenmcleod.tumblr.com/">{blog}</a><br>
+    <a href="mailto:" id="envelope">  {email}</a><br>
+    <a href="http://kenmcleod.tumblr.com/" id="tumblr-square">  {blog}</a><br>
     {joined}
     </li>
 </ul>
